// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> with a valid color matches its snapshot 1`] = `
<span
  className="y-text y-text__color-secondary"
>
  test content
</span>
`;

exports[`<Text /> with a valid size matches its snapshot 1`] = `
<span
  className="y-text y-text__size-xLarge"
>
  test content
</span>
`;

exports[`<Text /> with additional className matches its snapshot 1`] = `
<span
  className="y-text TEST_CLASSNAME"
>
  test content
</span>
`;

exports[`<Text /> with default options matches its snapshot 1`] = `
<span
  className="y-text"
>
  test content
</span>
`;
